# mime-x

./: .gitignore  README.md  pyproject.toml
data/: mime-x.desktop
scripts/: install.sh  uninstall.sh
src/mime_x/: main.py  mime_manager.py  styles.py
